# renn_ai

./: .env.example  .gitignore  MEMORY.md  README.md  main.py  pyproject.toml  requirements.txt  t.txt
.claude/: CLAUDE.md  MEMORY.md  settings.local.json
.claude/skills/: CLAUDE.md
config/: settings.py
config/track_maps/: example_track.json  monza.json
database/: cleanup_all_data.sql  diagnose_400.sql  fix_corrupted_clutch_laps.sql  migration_2026_04_25_multistat_inputs.sql  migration_2026_06_17_unique_session_lap.sql  migration_fix_400.sql  schema.sql
docs/: validation_monza_model.md  validation_monza_model_v2.md  validation_monza_model_v3.md
poster/: poster_catolica_a0.pptx
scripts/: benchmark_tts.py  map_track.py  query_history.py  run_session.py  train_model.py
src/: __init__.py
src/analysis/: __init__.py  lap_analyzer.py  pattern_detector.py  report_builder.py
src/memory/: __init__.py  graphics_page.py  physics_page.py  shared_memory_reader.py  static_page.py
src/models/: __init__.py  sector_model.py
src/output/: __init__.py  console_reporter.py  tts_integration.py  voice_message.py
src/persistence/: __init__.py  lap_uploader.py  query_helpers.py  query_service.py  supabase_client.py
src/recording/: __init__.py  lap_recorder.py  sector_aggregator.py
tests/: __init__.py  test_lap_recorder.py  test_lap_uploader.py  test_memory_reader.py  test_pattern_detector.py  test_query_service.py  test_sector_model.py  test_supabase_client.py  test_voice_message.py
tests/fixtures/: sample_lap.json
(+1 files in other folders)
