[project]
name = "renn-ai"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=2.4.3",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
    "ruff==0.6.9",
    "scikit-learn>=1.3.0",
    "stable-baselines3==2.3.2",
    "supabase==2.10.0",
    "tensorboard==2.17.0",
]
